getting there with the first version

--- a/tests/integration/data-simple/views/bios.yml
+++ b/tests/integration/data-simple/views/bios.yml
@@ -1,4 +1,5 @@
-path: /bios/{{ author.pk }}
+path:
+  template: /bios/{{ author.pk }}
+  for-each:
+    author: session.query(Author).all()
 template: author-bio
-for-each:
-  author: session.query(Author).all()
