--- a/tests/integration/data-simple/views/home.yml
+++ b/tests/integration/data-simple/views/home.yml
@@ -3,8 +3,10 @@ template: homepage
 context:
   dynamic:
     posts: >
-      session.query(Post)
-        .filter(Post.draft==False)
-        .order_by(Post.published.desc())
+      session.query(Post).filter(
+        Post.draft==False
+      ).order_by(
+        Post.published.desc()
+      ).all()
   static:
     page-title: Welcome to the test blog
