added ability to specify project-wide context information

--- a/tests/integration/data-simple/config.yml
+++ b/tests/integration/data-simple/config.yml
@@ -1,1 +1,7 @@
 project-name: Unit Test Project
+base-path: /
+context:
+  static:
+    default-page-title: Untitled Page
+  dynamic:
+    all-authors: session.query(Author).order_by(Author.first_name.asc()).all()
