--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
+  - "2.7"
   - "3.5"
 install:
-  - "python setup.py install"
+  - "pip install -r requirements.txt"
 script:
-  - "python -m unittest"
-
+  - "python -m unittest discover"
