forgot to update requirements.txt for minimum versioning

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-future==0.16.0
-jinja2==2.8
-PyYAML==3.11
-SQLAlchemy==1.0.14
-markdown==2.6.6
-livereload==2.4.1
+future>=0.16.0
+jinja2>=2.8
+PyYAML>=3.11
+SQLAlchemy>=1.0.14
+markdown>=2.6.6
+livereload>=2.4.1
