--- a/tests/integration/data-simple/views/paged-posts.yml
+++ b/tests/integration/data-simple/views/paged-posts.yml
@@ -1,5 +1,5 @@
 path:
-  template: /paged-posts/{{ page.number }}
+  template: /paged-posts/{{ page }}
   for-each:
     page: paginate(session.query(Post).filter(Post.draft==False).order_by(Post.published.desc()), 2)
 template: paged-post
