replacing livereload library with httpwatcher

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ jinja2>=2.8
 PyYAML>=3.11
 SQLAlchemy>=1.0.14
 markdown>=2.6.6
-livereload>=2.4.1
 python-slugify>=1.2.1
 six>=1.10.0
 lipsum>=0.1.1
+httpwatcher>=0.4.0
