--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+wheel
 argh==0.26.2
 colorlog==3.1.4
 future==0.16.0
@@ -17,3 +18,4 @@ SQLAlchemy==1.2.12
 tornado==5.1.1
 Unidecode==1.0.22
 watchdog==0.9.0
+paramiko==2.4.2
