--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ python-slugify==1.2.6
 PyYAML==3.13
 six==1.11.0
 SQLAlchemy==1.2.12
-tornado==5.1.1
+tornado<5
 Unidecode==1.0.22
 watchdog==0.9.0
 paramiko==2.4.2
