--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ include README.rst
 include LICENSE.md
 include requirements.txt
 include CONTRIBUTORS
+include statik/templates/index_page.html
+include statik/templates/model_page.html
