--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,4 @@ SQLAlchemy==1.2.12
 Unidecode==1.0.22
 watchdog==0.9.0
 paramiko==2.4.2
-git+https://github.com/kx-chen/netlify_deployer.git
+git+https://github.com/kx-chen/netlify_deployer.git#egg=netlify_uploader
