--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ Unidecode==1.0.22
 watchdog==0.9.0
 paramiko==2.4.2
 git+https://github.com/kx-chen/netlify_deployer.git#egg=netlify_uploader
+jinja2schema
