--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,20 @@
 wheel
 argh==0.26.2
-colorlog==3.1.4
-future==0.16.0
+colorlog==4.0.2
 httpwatcher==0.5.2
-Jinja2==2.10
+Jinja2==2.10.3
 lipsum==0.1.2
-Markdown==3.0.1
-MarkupSafe==1.0
-mock==2.0.0
+Markdown==3.1.1
+MarkupSafe==1.1.1
+mock==3.0.5
 mlalchemy==0.2.2
 pathtools==0.1.2
-psycopg2-binary==2.7.6.1
+psycopg2-binary==2.8.3
 pystache==0.5.4
-python-dateutil==2.7.3
-python-slugify==1.2.6
-PyYAML>=4.2b1
-six==1.11.0
-SQLAlchemy==1.2.12
-Unidecode==1.0.22
+python-dateutil==2.8.0
+python-slugify==3.0.4
+PyYAML>=5.1.2
+SQLAlchemy==1.3.9
+Unidecode==1.1.1
 watchdog==0.9.0
-paramiko==2.4.2
-git+https://github.com/kx-chen/netlify_deployer.git#egg=netlify_deployer
+paramiko==2.6.0
