--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
-include README.rst
+include README.md
 include LICENSE.md
 include requirements.txt
-include CONTRIBUTORS
 include statik/templates/index_page.html
 include statik/templates/model_page.html
