--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ jobs:
 
 install:
   - "pip install -r requirements.txt"
+  - "pip freeze"
 script:
   - "python -m unittest discover"
   - pip install .
